# llm-bdi-style

./: 20250613_finetuning.py  20250613_finetuning_os.py  20250616_finetuning.py  20250616_finetuning_os.py  20250617_finetuning.py  20250617_finetuning_os.py  20250618_finetuning.py  20250618_finetuning_os.py  README.md  data-generation-v2.ipynb  data-generation.ipynb  example.env  finetuning.py  finetuning_os.py  finetuning_os_val.py  finetuning_val.py  finetuning_val_g.py  finetuning_val_g_600.py  inference.py  inference_new.py  inference_os.py  inference_os_new.py  pyproject.toml  training_randomization.ipynb
data/: testi_IAI.xlsx  testi_all.xlsx  testi_cerebras_20250412.xlsx  testi_cerebras_20250511.xlsx  testi_cerebras_20250608.xlsx  testi_mistral_20250412.xlsx  testi_mistral_20250511.xlsx  testi_mistral_20250608.xlsx  testi_qwen_20250412.xlsx  testi_qwen_20250511.xlsx  testi_qwen_20250608.xlsx  testi_randomized.xlsx
