[project]
name = "llm-bdi-style"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cerebras-cloud-sdk>=1.29.0",
    "dashscope>=1.23.1",
    "jupyter>=1.1.1",
    "mistralai>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
]
